fix(ui): use thin scroll bars on firefox as chrome scrollbar styling doesn't work there

--- a/ui/src/styles/main.css
+++ b/ui/src/styles/main.css
@@ -50,3 +50,10 @@ body {
 .request-method--DELETE {
     color: var(--base-color-error);
 }
+
+/* firefox fixes */
+@-moz-document url-prefix() {
+    * {
+        scrollbar-width: thin;
+    }
+}
